Refactor: standardize 'see_last_result' phrasing across English, Romanian, and Ukrainian locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -872,7 +872,7 @@
       "social": "Social",
       "latest_results": "Latest Results",
       "how_it_works": "How it works",
-      "see_last_result": "Baseline Assessment Results"
+      "see_last_result": "Latest results"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Assessment completed",
