--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -891,7 +891,7 @@
       "social": "Social",
       "latest_results": "Ultimele rezultate",
       "how_it_works": "Cum funcționează",
-      "see_last_result": "Rezultatele evaluării inițiale"
+      "see_last_result": "Ultimele rezultate"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Evaluare finalizată",
