--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -872,7 +872,7 @@
       "social": "Соціальний",
       "latest_results": "Останні Результати",
       "how_it_works": "Як це працює",
-      "see_last_result": "Базова оцінка результатів"
+      "see_last_result": "Останні результати"
     },
     "baseline-assesment-result": {
       "assessment_completed": "Оцінювання завершено",
