Fix: BaselineAssesmentResult component styling

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -913,7 +913,8 @@
       "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
       "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися.",
       "summary_heading": "Рекомендації, сформовані на основі отриманого балу",
-      "organizations": "Рекомендовані організації"
+      "organizations": "Рекомендовані організації",
+      "view_more": "Переглянути більше"
     }
   },
   "pages": {
