--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -933,7 +933,8 @@
       "dec_dec_same": "Progres grozav! Psihologic și biologic au scăzut, în timp ce social a rămas la fel.",
       "dec_dec_dec": "Progres excelent! Psihologic, biologic și social au scăzut toți.",
       "summary_heading": "Recomandări generate în funcție de scorul obținut",
-      "organizations": "Organizații recomandate"
+      "organizations": "Organizații recomandate",
+      "view_more": "Vezi mai mult"
     }
   },
   "pages": {
