Add: missing translation for baseline assessment

--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -912,6 +912,7 @@
       "dec_dec_inc": "Великий прогрес! Психологічний та біологічний зменшилися, хоча соціальний зріс.",
       "dec_dec_same": "Великий прогрес! Психологічний та біологічний зменшилися, тоді як соціальний залишився без змін.",
       "dec_dec_dec": "Відмінний прогрес! Психологічний, біологічний та соціальний усі зменшилися.",
+      "same_same_same": "Ваші результати такі самі, як і в попередній оцінці.",
       "summary_heading": "Рекомендації, сформовані на основі отриманого балу",
       "organizations": "Рекомендовані організації",
       "view_more": "Переглянути більше"
